--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
-    "sass": "^1.71.1"
+    "react-router-dom": "^6.22.3",
+    "sass": "^1.71.1",
+    "swr": "^2.2.5"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
@@ -25,8 +27,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
-    // "postcss": "^8.4.35",
-    // "tailwindcss": "^3.4.1",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1",
     "vite": "^5.1.0"
   }
 }
